# jupyter-env-templates

./: .gitignore  Makefile  README.md
assets/nlp-ja-python3-8/: .env.template  Dockerfile  README.md  pyproject.toml
assets/nlp-ja-pytorch-python3-8/: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/python3-10/: .env.template  Dockerfile  README.md  pyproject.toml
assets/python3-11/: Dockerfile  README.md  pyproject.toml
assets/python3-8/: .env.template  Dockerfile  README.md  pyproject.toml
docs/cuda/base/: README.md  check_cuda.sh  docker-compose-base.yml  docker-compose-legacy.yml  docker-compose.yml
docs/cuda/cuda-tutorial/: README.md  docker-compose-legacy.yml  docker-compose.yml
docs/cuda/custom-base/: Dockerfile  README.md  check_cuda.sh  docker-compose.yml
docs/cuda/devel/: Makefile  README.md  check_cuda.sh  docker-compose.yml
jupyterlab/: .env.template  .gitignore  Dockerfile  Makefile  pyproject.toml
jupyterlab-nlp-ja-python-3-8/: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml
jupyterlab-nlp-ja-python-3-8/scripts/: run.sh
jupyterlab-nlp-ja-python3-8/: .env.template  Dockerfile  docker-compose.yml  pyproject.toml
jupyterlab-nlp-ja-pytorch-python3-8/: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jupyterlab-nlp-ja-pytorch-python3-8/docker/: docker-compose-for-cpu.yml
jupyterlab-nlp-ja-pytorch-python3-8/scripts/: run.sh
jupyterlab-nlp-ja-pytorch-python3-8/scripts/cuda/: check_cuda.sh
jupyterlab-nlp-ja-pytorch-python3-8/work/: check_gpu.ipynb
jupyterlab-python3-10/: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
jupyterlab-python3-10/scripts/: run.sh
jupyterlab-python3-11/: .env.template  .gitignore
jupyterlab-python3-11/makefiles/: formatter.mk  pytest.mk
jupyterlab-python3-8/: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
jupyterlab/makefiles/: formatter.mk
scripts/: generate.sh
